# bp-service

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.sample.toml
.github/workflows/: release.yml
migrations/2025-03-15-194922_create_user/: down.sql  up.sql
migrations/2025-03-20-074950_create_members/: down.sql  up.sql
migrations/2025-03-20-075047_create_user_member/: down.sql  up.sql
migrations/2025-03-20-075156_create_records/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: member.rs  mod.rs  record.rs  user.rs
src/db/: member.rs  mod.rs  record.rs  user.rs
src/error/: api.rs  auth.rs
src/model/: auth.rs
src/util/: jwt.rs  mod.rs  serde_time_format.rs
