[package]
name = "bp-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
rocket = { version = "=0.5.1", features = ["json"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
lazy_static = "1.5.0"
